[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/character/HurtBox.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 18.9661

[node name="HurtBox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="invincibility_start" from="." to="." method="_on_HurtBox_invincibility_start"]
[connection signal="invinciblility_end" from="." to="." method="_on_HurtBox_invinciblility_end"]
